fix(dto, get user): fixing of dro models and get user handler
