# docs/swagger.json
@@ -519,7 +519,7 @@
                     "200": {
                         "description": "Success response",
                         "schema": {
-                            "$ref": "#/definitions/dto.ReadmeResponse"
+                            "$ref": "#/definitions/models.Readme"
                         }
                     },
                     "400": {
@@ -720,7 +720,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.SearchTemplateRequest"
+                            "$ref": "#/definitions/dto.SearchTemplateRequestDoc"
                         }
                     }
                 ],
@@ -792,6 +792,11 @@
                         "name": "image",
                         "in": "formData",
                         "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "name": "is_public",
+                        "in": "formData"
                     },
                     {
                         "type": "array",
@@ -904,6 +909,11 @@
                         "name": "image",
                         "in": "formData",
                         "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "name": "is_public",
+                        "in": "formData"
                     },
                     {
                         "type": "array",
@@ -1185,7 +1195,7 @@
                     "200": {
                         "description": "Template data",
                         "schema": {
-                            "$ref": "#/definitions/dto.TemplateResponse"
+                            "$ref": "#/definitions/models.Template"
                         }
                     },
                     "400": {
@@ -1343,8 +1353,7 @@
                         "type": "string",
                         "format": "binary",
                         "name": "avatar",
-                        "in": "formData",
-                        "required": true
+                        "in": "formData"
                     },
                     {
                         "type": "string",
@@ -1357,8 +1366,7 @@
                         "minLength": 1,
                         "type": "string",
                         "name": "nickname",
-                        "in": "formData",
-                        "required": true
+                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -1541,7 +1549,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.SearchWidgetRequest"
+                            "$ref": "#/definitions/dto.SearchWidgetRequestDoc"
                         }
                     }
                 ],
@@ -1797,7 +1805,7 @@
                     "200": {
                         "description": "Widget data",
                         "schema": {
-                            "$ref": "#/definitions/dto.WidgetResponse"
+                            "$ref": "#/definitions/models.Widget"
                         }
                     },
                     "400": {
@@ -1847,7 +1855,8 @@
             ],
             "properties": {
                 "password": {
-                    "type": "string"
+                    "type": "string",
+                    "minLength": 12
                 }
             }
         },
@@ -1924,14 +1933,14 @@
             "properties": {
                 "code": {
                     "type": "string",
-                    "minLength": 1
+                    "minLength": 6
                 },
                 "email": {
                     "type": "string"
                 }
             }
         },
-        "dto.SearchTemplateRequest": {
+        "dto.SearchTemplateRequestDoc": {
             "type": "object",
             "required": [
                 "amount",
@@ -1943,10 +1952,7 @@
                     "minimum": 1
                 },
                 "filter": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "type": "boolean"
-                    }
+                    "$ref": "#/definitions/dto.filterTemplatesFields"
                 },
                 "page": {
                     "type": "integer",
@@ -1956,14 +1962,11 @@
                     "type": "string"
                 },
                 "sort": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "type": "string"
-                    }
+                    "$ref": "#/definitions/dto.sortTemplatesFields"
                 }
             }
         },
-        "dto.SearchWidgetRequest": {
+        "dto.SearchWidgetRequestDoc": {
             "type": "object",
             "required": [
                 "amount",
@@ -1975,13 +1978,7 @@
                     "minimum": 1
                 },
                 "filter": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "type": "array",
-                        "items": {
-                            "type": "string"
-                        }
-                    }
+                    "$ref": "#/definitions/dto.filterWidgetsFields"
                 },
                 "page": {
                     "type": "integer",
@@ -1991,10 +1988,7 @@
                     "type": "string"
                 },
                 "sort": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "type": "string"
-                    }
+                    "$ref": "#/definitions/dto.sortWidgetsFields"
                 }
             }
         },
@@ -2013,8 +2007,8 @@
             "type": "object",
             "properties": {
                 "code": {
-                    "type": "string",
-                    "example": "200"
+                    "type": "integer",
+                    "example": 200
                 },
                 "message": {
                     "type": "string",
@@ -2022,9 +2016,49 @@
                 }
             }
         },
+        "dto.TemplateInfo": {
+            "type": "object",
+            "required": [
+                "description",
+                "id",
+                "image",
+                "last_update_time",
+                "likes",
+                "num_of_users",
+                "title"
+            ],
+            "properties": {
+                "description": {
+                    "type": "string",
+                    "minLength": 1
+                },
+                "id": {
+                    "type": "string"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "last_update_time": {
+                    "type": "string"
+                },
+                "likes": {
+                    "type": "integer",
+                    "minimum": 0
+                },
+                "num_of_users": {
+                    "type": "integer",
+                    "minimum": 0
+                },
+                "title": {
+                    "type": "string",
+                    "minLength": 1
+                }
+            }
+        },
         "dto.TemplateResponse": {
             "type": "object",
             "required": [
+                "description",
                 "id",
                 "image",
                 "last_update_time",
@@ -2036,6 +2070,10 @@
                 "title"
             ],
             "properties": {
+                "description": {
+                    "type": "string",
+                    "minLength": 1
+                },
                 "id": {
                     "type": "string"
                 },
@@ -2063,7 +2101,8 @@
                     "type": "string"
                 },
                 "title": {
-                    "type": "string"
+                    "type": "string",
+                    "minLength": 1
                 }
             }
         },
@@ -2071,14 +2110,19 @@
             "type": "object",
             "required": [
                 "avatar",
+                "email",
                 "id",
                 "nickname",
                 "num_of_readmes",
                 "num_of_templates",
+                "templates",
                 "time_of_register"
             ],
             "properties": {
                 "avatar": {
+                    "type": "string"
+                },
+                "email": {
                     "type": "string"
                 },
                 "id": {
@@ -2095,6 +2139,13 @@
                 "num_of_templates": {
                     "type": "integer",
                     "minimum": 0
+                },
+                "templates": {
+                    "type": "array",
+                    "minItems": 0,
+                    "items": {
+                        "$ref": "#/definitions/dto.TemplateInfo"
+                    }
                 },
                 "time_of_register": {
                     "type": "string"
@@ -2162,6 +2213,61 @@
                 }
             }
         },
+        "dto.filterTemplatesFields": {
+            "type": "object",
+            "properties": {
+                "isOfficial": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "dto.filterWidgetsFields": {
+            "type": "object",
+            "properties": {
+                "Tags": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "Types": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "dto.sortTemplatesFields": {
+            "type": "object",
+            "properties": {
+                "LastUpdateTime": {
+                    "type": "string",
+                    "example": "desc/asc"
+                },
+                "Likes": {
+                    "type": "string",
+                    "example": "desc/asc"
+                },
+                "NumOfUsers": {
+                    "type": "string",
+                    "example": "desc/asc"
+                }
+            }
+        },
+        "dto.sortWidgetsFields": {
+            "type": "object",
+            "properties": {
+                "Likes": {
+                    "type": "string",
+                    "example": "desc/asc"
+                },
+                "NumOfUsers": {
+                    "type": "string",
+                    "example": "desc/asc"
+                }
+            }
+        },
         "helpers.ApiErr": {
             "type": "object",
             "properties": {
@@ -2169,6 +2275,154 @@
                     "type": "integer"
                 },
                 "message": {}
+            }
+        },
+        "models.Readme": {
+            "type": "object",
+            "properties": {
+                "create_time": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "last_update_time": {
+                    "type": "string"
+                },
+                "links": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "owner_id": {
+                    "type": "string"
+                },
+                "render_order": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "template_id": {
+                    "type": "string"
+                },
+                "text": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "title": {
+                    "type": "string"
+                },
+                "widgets": {
+                    "type": "array",
+                    "items": {
+                        "type": "object",
+                        "additionalProperties": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "models.Template": {
+            "type": "object",
+            "properties": {
+                "create_time": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "is_public": {
+                    "type": "boolean"
+                },
+                "last_update_time": {
+                    "type": "string"
+                },
+                "likes": {
+                    "type": "integer"
+                },
+                "links": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "num_of_users": {
+                    "type": "integer"
+                },
+                "owner_id": {
+                    "type": "string"
+                },
+                "render_order": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "text": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "title": {
+                    "type": "string"
+                },
+                "widgets": {
+                    "type": "array",
+                    "items": {
+                        "type": "object",
+                        "additionalProperties": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "models.Widget": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "likes": {
+                    "type": "integer"
+                },
+                "link": {
+                    "type": "string"
+                },
+                "num_of_users": {
+                    "type": "integer"
+                },
+                "tags": {
+                    "type": "object",
+                    "additionalProperties": {}
+                },
+                "title": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string"
+                }
             }
         }
     }
