# internal/dto/responses.go
@@ -19,16 +19,25 @@ type WidgetResponse struct {
 	NumOfUsers  uint32 `json:"num_of_users" validate:"required,min=0"`
 }
 
-type TemplateResponse struct {
+type OwnerInfo struct {
+	OwnerId       string `json:"owner_id" validate:"required,uuid"`
+	OwnerAvatar   string `json:"owner_avatar" validate:"required"`
+	OwnerNickname string `json:"owner_nickname" validate:"required"`
+}
+
+type TemplateInfo struct {
 	Id             string    `json:"id" validate:"required,uuid"`
-	Title          string    `json:"title" validate:"required"`
+	Title          string    `json:"title" validate:"required,min=1"`
+	Description    string    `json:"description" validate:"required,min=1"`
 	Image          string    `json:"image" validate:"required"`
 	LastUpdateTime time.Time `json:"last_update_time" validate:"required"`
 	NumOfUsers     uint32    `json:"num_of_users" validate:"required,min=0"`
 	Likes          uint32    `json:"likes" validate:"required,min=0"`
-	OwnerId        string    `json:"owner_id" validate:"required,uuid"`
-	OwnerAvatar    string    `json:"owner_avatar" validate:"required"`
-	OwnerNickname  string    `json:"owner_nickname" validate:"required"`
+}
+
+type TemplateResponse struct {
+	TemplateInfo
+	OwnerInfo
 }
 
 type ReadmeResponse struct {
@@ -39,14 +48,16 @@ type ReadmeResponse struct {
 	CreateTime     time.Time `json:"create_time" validate:"required"`
 }
 
-// type UserResponse struct {
-// 	Id             string    `json:"id" validate:"required,uuid"`
-// 	Nickname       string    `json:"nickname" validate:"required,min=1"`
-// 	Avatar         string    `json:"avatar" validate:"required"`
-// 	NumOfReadmes   uint32    `json:"num_of_readmes" validate:"required,min=0"`
-// 	NumOfTemplates uint32    `json:"num_of_templates" validate:"required,min=0"`
-// 	TimeOfRegister time.Time `json:"time_of_register" validate:"required"`
-// }
+type UserResponse struct {
+	Id             string         `json:"id" validate:"required,uuid"`
+	Nickname       string         `json:"nickname" validate:"required,min=1"`
+	Email          string         `json:"email" validate:"required,email"`
+	Avatar         string         `json:"avatar" validate:"required"`
+	NumOfReadmes   uint32         `json:"num_of_readmes" validate:"required,min=0"`
+	NumOfTemplates uint32         `json:"num_of_templates" validate:"required,min=0"`
+	Templates      []TemplateInfo `json:"templates" validate:"required,min=0"`
+	TimeOfRegister time.Time      `json:"time_of_register" validate:"required"`
+}
 
 type SuccessResponse struct {
 	Code    int    `json:"code" example:"200"`
